[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/OsmeSpike.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/Osme/Osme_shadow3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/Osme/Osme_shadow.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Osme/Osme_shadow1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/Osme/Osme_shadow2.png" type="Texture" id=5]
[ext_resource path="res://Audio/Hit.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 5 )

[node name="OsmeSpike" type="Area2D"]
position = Vector2( 160, 96 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 23 )
shape = SubResource( 2 )
disabled = true

[node name="SoundAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.5

[node name="Tween" type="Tween" parent="."]

[node name="TimerAttack" type="Timer" parent="."]
one_shot = true

[node name="TimerDestroy" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_OsmeSpike_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerDestroy" to="." method="_on_TimerDestroy_timeout"]
